# IResume

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
data/: history.db-shm  history.db-wal
docs/optimilization/: resume-generation-timeout.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  router.ts  style.css
frontend/src/api/: index.ts
frontend/src/views/: ProfileView.vue  ResumeView.vue
src/iresume/: config.py  main.py
src/iresume/agent/: graph.py  state.py
src/iresume/agent/nodes/: gap_analyzer.py  jd_parser.py  markdown_exporter.py  profile_loader.py  resume_generator.py  skill_matcher.py
src/iresume/agent/prompts/: gap_analyzer_prompt.py  jd_parser_prompt.py  resume_generator_prompt.py  skill_matcher_prompt.py
src/iresume/api/: deps.py  middleware.py
src/iresume/api/routes/: profile.py  resume.py
src/iresume/exporter/: markdown_renderer.py
src/iresume/models/: jd.py  profile.py  resume.py  task.py
src/iresume/services/: resume_runner.py  task_manager.py
src/iresume/storage/: history_repository.py  profile_repository.py
src/iresume/utils/: llm.py  logger.py
tests/: conftest.py  test_core.py
