[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iresume"
version = "0.1.0"
description = "AI Agent-powered resume generator and job application system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]
pdf = [
    "weasyprint>=63",
]
scraper = [
    "playwright>=1.49",
]

[project.scripts]
iresume = "iresume.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iresume"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
